# zen-digital-twin-framework

./: .env.template  .gitignore  config.ini.example  digital_twin.py  pyproject.toml  requirements.txt
custom/: callback.py  conversion.py
opcmodule/: opc_device.py  opcmodule.py
persistence/: Untitled-1.py  postgres_persistence.py  postgres_persistence_new_format.py
retrieval/: core_retrieval.py  seeq_retrieval.py
simulator/: ep_manager.py
