[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zen-digital-twin-framework"
version = "1.0.0"
description = "Reusable Python framework for EnergyPlus-based building energy digital twins"
authors = [
    {name = "Frank Doyle", email = "fdoyle@albany.edu"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyenergyplus==0.4.0",
    "seeq==1.5.0",
    "psycopg2-binary==2.9.9",
    "pandas==2.1.4",
    "python-dotenv==1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest==7.4.3",
]

[project.urls]
Homepage = "https://github.com/fjdoyle2002/zen-digital-twin-framework"
Repository = "https://github.com/fjdoyle2002/zen-digital-twin-framework"
